Update exercises in 06 cloud architecture